process order and payment
