# src/main/kotlin/com/wutsi/checkout/manager/dto/CheckoutResponse.kt
@@ -1,9 +1,0 @@
-package com.wutsi.checkout.manager.dto
-
-import kotlin.String
-
-public data class CheckoutResponse(
-    public val orderId: String = "",
-    public val transactionId: String = "",
-    public val transactionStatus: String = ""
-)
