# src/main/kotlin/com/wutsi/checkout/manager/dto/CreateChargeResponse.kt
@@ -1,0 +1,8 @@
+package com.wutsi.checkout.manager.dto
+
+import kotlin.String
+
+public data class CreateChargeResponse(
+    public val transactionId: String = "",
+    public val status: String = ""
+)
