# src/main/kotlin/com/wutsi/checkout/manager/event/TransactionEventHandler.kt
@@ -8,6 +8,8 @@ import com.wutsi.checkout.access.dto.UpdateOrderStatusRequest
 import com.wutsi.checkout.access.error.ErrorURN
 import com.wutsi.enums.OrderStatus
 import com.wutsi.enums.TransactionType
+import com.wutsi.event.EventURN
+import com.wutsi.event.OrderEventPayload
 import com.wutsi.platform.core.error.ErrorResponse
 import com.wutsi.platform.core.logging.KVLogger
 import com.wutsi.platform.core.stream.Event
@@ -23,36 +25,23 @@ class TransactionEventHandler(
     private val logger: KVLogger,
     private val checkoutAccessApi: CheckoutAccessApi
 ) {
-    fun onChargeSuccessful(event: Event) {
-        val payload = toTransactionEventPayload(event)
-        log(payload)
-
-        payload.orderId?.let {
-            checkoutAccessApi.updateOrderStatus(
-                id = it,
-                request = UpdateOrderStatusRequest(
-                    status = OrderStatus.OPENED.name
-                )
-            )
-        }
-    }
-
     fun onTransactionPending(event: Event) {
         val payload = toTransactionEventPayload(event)
         log(payload)
 
         val tx = checkoutAccessApi.getTransaction(payload.transactionId).transaction
+        logger.add("transaction_order_id", tx.orderId)
+        logger.add("transaction_status", tx.status)
         if (tx.status != Status.PENDING.name) {
-            logger.add("transaction_status", tx.status)
             return
         }
 
         try {
             val response = checkoutAccessApi.syncTransactionStatus(tx.id)
-            logger.add("transaction_status", response.status)
+            logger.add("transaction_new_status", response.status)
             handleSyncResponse(tx, response)
         } catch (ex: FeignException) {
-            handleSyncException(tx, ex)
+            handleSyncException(ex)
         }
     }
 
@@ -62,24 +51,30 @@ class TransactionEventHandler(
         }
 
         if (tx.type == TransactionType.CHARGE.name) {
-            tx.orderId?.let {
-                eventStream.enqueue(
-                    InternalEventURN.CHARGE_SUCESSFULL.urn,
-                    TransactionEventPayload(transactionId = tx.id, orderId = tx.orderId)
-                )
-            }
-        } else if (tx.type == TransactionType.CASHOUT.name) {
-            eventStream.enqueue(
-                InternalEventURN.CASHOUT_SUCESSFULL.urn,
-                TransactionEventPayload(transactionId = tx.id)
-            )
+            onChargeSuccessful(tx)
         }
     }
 
-    private fun handleSyncException(tx: Transaction, ex: FeignException) {
+    private fun onChargeSuccessful(tx: Transaction) {
+        val orderId = tx.orderId ?: return
+        val order = checkoutAccessApi.getOrder(orderId).order
+        if (order.status != OrderStatus.UNKNOWN.name) {
+            return
+        }
+        // Open the order, since the transaction has been successful
+        checkoutAccessApi.updateOrderStatus(
+            id = orderId,
+            request = UpdateOrderStatusRequest(
+                status = OrderStatus.OPENED.name
+            )
+        )
+        eventStream.publish(EventURN.ORDER_OPENED.urn, OrderEventPayload(orderId))
+    }
+
+    private fun handleSyncException(ex: FeignException) {
         val resp = mapper.readValue(ex.contentUTF8(), ErrorResponse::class.java)
         if (resp.error.code == ErrorURN.TRANSACTION_FAILED.urn) {
-            logger.add("transaction_status", Status.FAILED)
+            logger.add("transaction_new_status", Status.FAILED)
         } else {
             throw ex
         }
@@ -90,6 +85,5 @@ class TransactionEventHandler(
 
     private fun log(payload: TransactionEventPayload) {
         logger.add("payload_transaction_id", payload.transactionId)
-        logger.add("payload_order_id", payload.orderId)
     }
 }
